[test]#8 post 생성 조회 테스트 코드 작성