@@ -1,18 +1,19 @@
-import static org.mockito.Mockito.*;
+package org.netway.dongnehankki.post.application;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.Optional;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.netway.dongnehankki.post.application.PostService;
+import org.netway.dongnehankki.global.util.S3Service;
 import org.netway.dongnehankki.post.domain.Hashtag;
+import org.netway.dongnehankki.post.domain.Image;
 import org.netway.dongnehankki.post.domain.Post;
+import org.netway.dongnehankki.post.domain.PostHashtag;
 import org.netway.dongnehankki.post.dto.request.PostCreateRequest;
+import org.netway.dongnehankki.post.dto.response.PostResponse;
 import org.netway.dongnehankki.post.repository.HashtagRepository;
 import org.netway.dongnehankki.post.repository.ImageRepository;
 import org.netway.dongnehankki.post.repository.PostHashtagRepository;
@@ -21,11 +22,27 @@ import org.netway.dongnehankki.store.domain.Store;
 import org.netway.dongnehankki.store.infrastructure.repository.StoreRepository;
 import org.netway.dongnehankki.user.domain.User;
 import org.netway.dongnehankki.user.infrastructure.UserRepository;
-import org.netway.dongnehankki.global.util.S3Service;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.web.multipart.MultipartFile;
+
+import java.util.List;
+import java.util.Optional;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class PostServiceTest {
+
+    @InjectMocks
+    private PostService postService;
 
     @Mock
     private PostRepository postRepository;
@@ -34,45 +51,94 @@ class PostServiceTest {
     @Mock
     private HashtagRepository hashtagRepository;
     @Mock
+    private PostHashtagRepository postHashtagRepository;
+    @Mock
     private UserRepository userRepository;
     @Mock
-    private StoreRepository storeRepository; 
-    @Mock
-    private PostHashtagRepository postHashtagRepository;
+    private StoreRepository storeRepository;
     @Mock
     private S3Service s3Service;
 
-    @InjectMocks
-    private PostService postService;
-
     @Test
-    @DisplayName("게시글 생성 시 Post 객체가 올바르게 저장된다")
-    void createPost_savesPostEntity() {
-        // Given
+    @DisplayName("게시글 생성 테스트")
+    void createPost_success() {
+        // given
         Long userId = 1L;
+        Long storeId = 1L;
         MultipartFile mockFile = mock(MultipartFile.class);
-        when(mockFile.getOriginalFilename()).thenReturn("test.jpg");
-        PostCreateRequest request = new PostCreateRequest(1L, "New Post", Arrays.asList(mockFile), Arrays.asList("tag1", "tag2"));
-        User user = User.ofCustomer("loginId", "password", "nickname", "name", "phone"); // Dummy user
+        PostCreateRequest request = new PostCreateRequest(storeId, "새 게시글", new MultipartFile[]{mockFile}, List.of("#맛집"));
 
-        when(userRepository.findById(userId)).thenReturn(Optional.of(user));
-        when(storeRepository.findById(anyLong())).thenReturn(Optional.of(new Store()));
-        when(postRepository.save(any(Post.class))).thenAnswer(invocation -> invocation.getArgument(0));
-        when(s3Service.uploadFile(any(MultipartFile.class), anyString())).thenReturn("http://mock-s3-url/test.jpg");
-        when(hashtagRepository.findByName("tag1")).thenReturn(Optional.empty());
-        when(hashtagRepository.findByName("tag2")).thenReturn(Optional.of(Hashtag.of("tag2")));
+        User user = User.ofCustomer("loginId", "password", "nickname", "name", "phone");
+        Store store = Store.createStore("가게", 1.0, 1.0, "주소", "시군", 1, 1L);
 
-        // When
+        given(userRepository.findById(userId)).willReturn(Optional.of(user));
+        given(storeRepository.findById(storeId)).willReturn(Optional.of(store));
+        given(s3Service.uploadFile(any(), anyString())).willReturn("s3-image-url");
+        given(hashtagRepository.findByName(anyString())).willReturn(Optional.of(Hashtag.of("#맛집")));
+
+        // when
         postService.createPost(request, userId);
 
-        // Then
-        verify(userRepository).findById(userId);
-        verify(storeRepository).findById(anyLong());
+        // then
         verify(postRepository).save(any(Post.class));
-        verify(s3Service).uploadFile(any(MultipartFile.class), eq("post-images"));
-        verify(imageRepository).save(any());
-        verify(hashtagRepository, times(2)).findByName(anyString());
-        verify(hashtagRepository).save(any(Hashtag.class));
-        verify(postHashtagRepository, times(2)).save(any());
+        ArgumentCaptor<Image> imageArgumentCaptor = ArgumentCaptor.forClass(Image.class);
+        verify(imageRepository).save(imageArgumentCaptor.capture());
+        assertThat(imageArgumentCaptor.getValue().getDisplayOrder()).isEqualTo(0);
+        verify(postHashtagRepository).save(any(PostHashtag.class));
+    }
+
+    @Test
+    @DisplayName("단일 게시글 조회 성공 테스트")
+    void getPost_success() {
+        // given
+        Long postId = 1L;
+        User user = User.ofCustomer("loginId", "password", "nickname", "name", "phone");
+        Store store = Store.createStore("가게", 1.0, 1.0, "주소", "시군", 1, 1L);
+        Post post = Post.of("내용", store, user);
+
+        given(postRepository.findById(postId)).willReturn(Optional.of(post));
+
+        // when
+        PostResponse response = postService.getPost(postId);
+
+        // then
+        assertThat(response.getContent()).isEqualTo("내용");
+        assertThat(response.getStoreName()).isEqualTo("가게");
+        assertThat(response.getUserNickname()).isEqualTo("nickname");
+    }
+
+    @Test
+    @DisplayName("단일 게시글 조회 실패 - 게시글 없음")
+    void getPost_throwsException_whenPostNotFound() {
+        // given
+        Long postId = 1L;
+        given(postRepository.findById(postId)).willReturn(Optional.empty());
+
+        // when & then
+        assertThatThrownBy(() -> postService.getPost(postId))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("Post not found");
+    }
+
+    @Test
+    @DisplayName("가게별 게시글 목록 조회 테스트")
+    void getPostsByStore_success() {
+        // given
+        Long storeId = 1L;
+        Pageable pageable = PageRequest.of(0, 10);
+        User user = User.ofCustomer("loginId", "password", "nickname", "name", "phone");
+        Store store = Store.createStore("가게", 1.0, 1.0, "주소", "시군", 1, 1L);
+        Post post = Post.of("내용", store, user);
+        Page<Post> postPage = new PageImpl<>(List.of(post), pageable, 1);
+
+        given(postRepository.findByStore_StoreId(storeId, pageable)).willReturn(postPage);
+
+        // when
+        Page<PostResponse> response = postService.getPostsByStore(storeId, pageable);
+
+        // then
+        assertThat(response.getTotalElements()).isEqualTo(1);
+        assertThat(response.getContent()).hasSize(1);
+        assertThat(response.getContent().get(0).getContent()).isEqualTo("내용");
     }
 }
